--- a/styles/style.css
+++ b/styles/style.css
@@ -90,3 +90,33 @@
 .plans{
     text-align: center;
 }
+
+.title{
+    font-weight: 2000;
+    font-size: 50px;
+    color: #FFFFFF;
+    padding-top: 60px;
+    margin-left: 40px;
+}
+.call-now{
+    text-align: center;
+       padding: 20px 20px;
+       font-weight: 700;
+       font-size: 18px;
+       background-color: #FFFFFF;
+       color: orangered;
+       border-radius: 5px;
+       border: 0;
+       margin-top: 20px;
+       margin-left: 40px;
+}
+.gradient-part{
+    width: 100%;
+    height: 100vh;
+    background-image: url("../images/gradient1.png");
+    background-repeat: no-repeat;
+    margin-left: 250px;
+    margin-right: 250px; 
+    margin-top: 250px;
+    
+}
